[AB-xxx] adding information whether a command is slash/message command only to help output resizing template content column